--- a/12LectureTask/views/add.ejs
+++ b/12LectureTask/views/add.ejs
@@ -5,19 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Outfit:wght@100..900&family=Plaster&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <!-- custom css -->
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <h1>add</h1>
-    <form action="/add" method="post">
-        <input type="text" name="contactName" placeholder="Enter your name" required>
-        <input type="email" name="email" placeholder="enter your email " required>
-        <input type="number" name="number" placeholder="enter your number " required>
-        <input type="text" name="text" placeholder="enter tag" required>
-        <input type="date" name="lastContacted" required>
-        <button type="submit">add</button>
-    </form>
-    <a href="/">Back</a>
+    <main>
+
+        <form action="/add" method="post">
+            <h1>Add Contact</h1>
+            <input type="text" name="contactName" placeholder="Enter your name" required>
+            <input type="email" name="email" placeholder="enter your email " required>
+            <input type="number" name="phone" placeholder="enter your number " required>
+            <input type="text" name="tag" placeholder="enter tag" required>
+            <input type="date" name="lastContacted" required>
+            <button type="submit">add</button>
+            <a href="/" class="back-btn">Back</a>
+        </form>
+    </main>
 </body>
 
 </html>
